# lang-huu-nghi-management

./: .gitignore  .replit  CLEAN_PUSH_SOLUTION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS_SUMMARY.md  FINAL_CLEAN_DEPLOYMENT.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_GITHUB_PUSH_SOLUTION.md  FINAL_PUSH_COMMANDS.md  FIX_CORRUPTED_GIT.md  GDRIVE_BACKUP_SETUP.md  GDRIVE_STREAMLIT_SUMMARY.md  GITHUB_DEPLOY_COMMANDS.md  GITHUB_PUSH_INSTRUCTIONS.md  GOOGLE_DRIVE_SETUP_COMPLETE.md  GOOGLE_DRIVE_SETUP_FINAL.md  GOOGLE_OAUTH_REDIRECT_FIX.md  GOOGLE_OAUTH_SETUP.md  GOOGLE_OAUTH_TROUBLESHOOTING.md  MANUAL_GITHUB_PUSH.md  OAUTH_VERIFICATION_FIX.md  QUICK_DEPLOY.md  QUICK_PUSH_FIX.md  QUICK_SUPABASE_SETUP.md  README.md  SECURITY_FIX_INSTRUCTIONS.md  SERVICE_ACCOUNT_SETUP.md  STREAMLIT_CLOUD_ENTRY_FIX.md  STREAMLIT_CLOUD_FIX.md  STREAMLIT_DEPLOYMENT_GUIDE.md  STREAMLIT_GDRIVE_SETUP.md  STREAMLIT_SECRETS_GUIDE.md  SUPABASE_BACKUP_GUIDE.md  SUPABASE_CONNECTION_SETUP.md  SUPABASE_DEPLOYMENT_GUIDE.md  SUPABASE_DEPLOYMENT_STEPS.md  SUPABASE_KEEPALIVE_GUIDE.md  SUPABASE_MIGRATION_SCRIPT.sql  Trang_chủ.py  (+52 more)
.streamlit/: config.toml
attached_assets/: Pasted--tornado-6-4-2-twilio-9-5-0-typing-extensions-4-12-2-typing-inspection-0-4-0--1753006213618_1753006213620.txt  Pasted-D-ng-2-L-i-nh-d-ng-ng-y-th-ng-NaTType-does-not-support-strftime-D-ng-3-L-i-nh-d-ng-ng--1741716665226.txt  Pasted-D-ng-4-H-v-t-n-Kh-ng-th-c-nh-d-ng-ng-y-th-ng-N-m-sinh-Vui-l-ng-s-d-ng-m-t-trong-c-c-nh-1743011059376.txt  ds trẻ em 2023_1752927711591.xlsx  (+11 more)
database_backups/: backup_20250311_183137.db  (+1 more)
(+19 files in other folders)
