[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.3.1",
    "sendgrid>=6.11.0",
    "streamlit>=1.43.1",
    "twilio>=9.5.0",
]
